php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #13982 ignore_user_abort affects later requests
Submitted: 2001-11-07 13:02 UTC Modified: 2002-09-19 11:05 UTC
From: sveinp at basefarm dot no Assigned: zeev (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 4.3.0-dev OS: SunOS 5.8 Generic
Private report: No CVE-ID: None
 [2001-11-07 13:02 UTC] sveinp at basefarm dot no
Bug #13711 reproduced. In addition, ignore_user_abort() 
also affects the following requests to the same apache process.

Apache/1.3.20
PHP 4.0.7RC2:
'./configure' '--prefix=/local/gnu' '--prefix=/local' '--with-apxs' '--enable-calendar' '--enable-discard-path' '--enable-exif' '--enable-force-cgi-redirect' '--enable-ftp' '--enable-magic-quotes' '--enable-memory-limit' '--enable-safe-mode' '--enable-shared' '--enable-shmop' '--disable-sockets' '--enable-sysvsem' '--enable-sysvshm' '--enable-trans-sid' '--enable-ucd-snmp-hack' '--enable-versioning' '--enable-wddx' '--enable-xml' '--enable-gd-native-ttf' '--with-bz2=/local' '--with-db3=/local' '--with-exec-dir=/www' '--with-freetype-dir=/local' '--with-gd=/local' '--with-gdbm=/local/gnu' '--with-java=no' '--with-jpeg-dir=/local' '--with-ldap=/local' '--without-mm' '--with-mod_charset' '--with-mysql=/local/mysql' '--with-oci8=/local/oracle/8.1.6' '--with-openssl=/local' '--with-png-dir=/local' '--without-readline' '--without-recode' '--with-snmp=/local/snmp' '--with-zlib=/local' '--with-config-file-path=/etc/php/php.conf'

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-11-10 19:59 UTC] sniper@php.net
Could you please try the latest CVS snapshot from
http://snaps.php.net/ (instead of the RC)

--Jani

 [2001-11-12 10:53 UTC] sveinp at basefarm dot no
Errors reproduced from todays snapshot
(200111120300)
 [2001-11-19 17:50 UTC] sniper@php.net
Fixed in CVS.

 [2001-11-20 02:29 UTC] derick@php.net
Zeev only fixed the set_time_limit bug, and did not touch the ignore_user_abort setting.
So it's still open
 [2001-11-20 04:15 UTC] sveinp at basefarm dot no
Just to confirm: I have rebuild from latest CVS. set_time_limit is fixed, but not ignore_user_abort().

For us, as for other ISPs I guess, these kind of bugs are
critical.


 [2002-06-13 17:48 UTC] sniper@php.net
reclassified and updated topic.

 [2002-09-03 18:34 UTC] sniper@php.net
Related to #11831
 [2002-09-19 11:05 UTC] zeev@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 03:00:02 2026 UTC