Fix the last part of bug #13982 (ignore_user_abort() settings were 'leaking' between requests)